continous click to roll dice without refreshing page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="score">
       <p>
-        <b>Initial Score is <span class="tScore"> 0 </span></b>
+        <b>Initial Score is 0 </b>
       </p>
     </div>
     <div class="game-bg">
